k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: airline-data-svc
  namespace: airline-data
spec:
  selector:
    app: airline-data
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
