k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airline-data-ingress
  namespace: airline-data
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: airline-data
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: airline-data-svc
              servicePort: 8080
